...
        80,
        100,
        120,
        150,
        200,
        250,
        300,
        400,
        500,
        600,
        800,
        1_000,
        1_200,
        1_500,
...
